# bevox

./: .gitignore  .gitmodules  Cargo.toml
assets/models/: earth.vox
assets/shaders/: buffer_swap.wgsl  custom_material.wgsl  physics.wgsl  physics_handler.wgsl  player.wgsl  raytrace.wgsl  sand.wgsl  voxel.wgsl
assets/shaders/blocks/: sand.wgsl  water.wgsl
assets/shaders/types/: player.wgsl  voxel.wgsl
shaders/: physics.glsl  render.glsl  voxel.glsl
shaders/blocks/: sand.glsl  water.glsl
src/: flycam.rs  gui.rs  main.rs  physics.rs  render.rs  tests.rs  voxel.rs
src/render/: mod.rs  octree.rs  place_over_frame.rs  raytracing_pipeline.rs
src/util/: mod.rs
src/voxel/: mod.rs
