[package]
name = "voxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = "0.18.3"
bevy_app_compute = { path = "bevy_app_compute" }
bitfield = "0.14.0"
bytemuck = "1.13.1"
rand = "0.8.5"
